# qtsize

./: CMakeLists.txt  LICENSE  README.md
src/: MainWindow.cxx  MainWindow.h  main.cxx
